# ESP-IDF bindings

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "esp_sources",
    srcs = glob(
        ["**/*.zig", "**/*.zon"],
        allow_empty = True,
        exclude = [".zig-cache/**", "zig-out/**"],
    ),
)

filegroup(
    name = "esp_c_sources",
    srcs = glob(
        ["**/*.c", "**/*.h"],
        allow_empty = True,
        exclude = [".zig-cache/**", "zig-out/**"],
    ),
)

filegroup(
    name = "esp_cmake",
    srcs = glob(
        ["**/*.cmake"],
        allow_empty = True,
        exclude = [".zig-cache/**", "zig-out/**"],
    ),
)
