# ESP library - ESP-IDF bindings and implementations

load("//bazel/zig:defs.bzl", "zig_lib")

package(default_visibility = ["//visibility:public"])

zig_lib(
    name = "esp",
    srcs = glob(["**/*"], exclude = ["idf/**", "impl/**"]) + [
        "//lib/esp/idf",
        "//lib/esp/impl",
    ],
    deps = [
        "//lib/crypto",
        "//lib/dns",
        "//lib/drivers",
        "//lib/hal",
        "//lib/trait",
    ],
)
