# Raylib simulator

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "raysim_sources",
    srcs = glob(
        ["**/*.zig"],
        allow_empty = True,
        exclude = [".zig-cache/**", "zig-out/**"],
    ),
)

filegroup(
    name = "raysim_fonts",
    srcs = glob(
        ["fonts/**/*"],
        allow_empty = True,
        exclude = [".zig-cache/**", "zig-out/**"],
    ),
)
