# TLS library - Pure Zig TLS 1.2/1.3 implementation

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "tls_sources",
    srcs = glob(
        ["**/*.zig", "**/*.zon"],
        allow_empty = True,
        exclude = [".zig-cache/**", "zig-out/**", "test/**"],
    ),
)

# Alias for consistency
alias(
    name = "sources",
    actual = ":tls_sources",
)
